[gd_scene load_steps=4 format=3 uid="uid://o8npypnga12n"]

[ext_resource type="Theme" uid="uid://dookxj2jcfvdp" path="res://assets/UI/UI_text.tres" id="1_dnoyw"]
[ext_resource type="Texture2D" uid="uid://d2abfh3vpch1c" path="res://assets/UI/game_highlight_button_fade.png" id="2_evadd"]
[ext_resource type="Script" path="res://scripts/UI/button_fade.gd" id="3_jvfs8"]

[node name="play" type="Button"]
theme = ExtResource("1_dnoyw")
text = "PLAY"
alignment = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(0, 47)
scale = Vector2(1e-05, 1.428)
texture = ExtResource("2_evadd")
script = ExtResource("3_jvfs8")

[connection signal="mouse_entered" from="." to="Sprite2D" method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="." to="Sprite2D" method="_on_play_mouse_exited"]
[connection signal="pressed" from="." to="Sprite2D" method="_on_play_pressed"]
